file copy mayhem

--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -18,32 +18,31 @@ job:
     - FIRECREST_URL=https://api.cscs.ch/cw/firecrest/v1
     - FIRECREST_SYSTEM=santis
     - FIRECREST_API_VERSION=1.16.0
-    - firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --force --system $FIRECREST_SYSTEM || true
-
-    - firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tests --system $FIRECREST_SYSTEM
-    - firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml --system $FIRECREST_SYSTEM
-    - firecrest filesystems 
-    - firecrest filesystems -s santis
-    - firecrest filesystems --system $FIRECREST_SYSTEM
-    #- mkdir /tmp/sirocco || true
-    #- apt-get update -y && apt-get install -y --no-install-recommends graphviz graphviz-dev rabbitmq-server
-    #- pip install --upgrade pip
-    #- pip install . 
-    #- whoami
-    #- echo $SCRATCH
-    #- echo $PWD
-    #- echo $HOME
-    #- firecrest --help
-    #- firecrest --help
-    #- firecrest upload --help
+    #- firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --force --system $FIRECREST_SYSTEM || true
+    #- firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tests --system $FIRECREST_SYSTEM
+    #- firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml --system $FIRECREST_SYSTEM
+    - firecrest ls --system $FIRECREST_SYSTEM /capstor/scratch/cscs/ricoh
     - firecrest id --system $FIRECREST_SYSTEM
     - firecrest filesystems --system $FIRECREST_SYSTEM
     - firecrest get-partitions --system $FIRECREST_SYSTEM
     - firecrest get-reservations --system $FIRECREST_SYSTEM
-    - firecrest ls / --system $FIRECREST_SYSTEM
-    - firecrest ls --system $FIRECREST_SYSTEM /
-    - firecrest ls --system $FIRECREST_SYSTEM /capstor
-    - firecrest ls --system $FIRECREST_SYSTEM /capstor/scratch
+    #- firecrest filesystems 
+    #- firecrest filesystems -s santis
+    #- firecrest filesystems --system $FIRECREST_SYSTEM
+    - mkdir /tmp/sirocco || true
+    - apt-get update -y && apt-get install -y --no-install-recommends graphviz graphviz-dev rabbitmq-server
+    - pip install --upgrade pip
+    - pip install . 
+    - whoami
+    #- echo $SCRATCH # here the scratch and everything is not defined
+    - echo $PWD
+    - echo $HOME
+    - firecrest --help
+    #- firecrest --help
+    #- firecrest upload --help
+    #- firecrest ls / --system $FIRECREST_SYSTEM
+    #- firecrest ls --system $FIRECREST_SYSTEM /
+    #- firecrest ls --system $FIRECREST_SYSTEM /capstor/scratch
     - verdi presto --profile-name "cscs-ci"
     - verdi computer setup --label remote --hostname unused --transport firecrest --scheduler firecrest -n 
     - verdi devel launch-add # hacky way to define localhost TODO do properly
