--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,10 @@ dependencies = [
   "ruamel.yaml",
   "aiida-core>=2.5",
   "aiida-icon>=0.4.0",
-  "aiida-firecrest @ git+https://github.com/aiidateam/aiida-firecrest.git@8e99890",
+  #agoscinski main
+  "aiida-firecrest @ git+https://github.com/agoscinski/aiida-firecrest.git@c8ea02d",
+  #upstream main
+  #"aiida-firecrest @ git+https://github.com/agoscinski/aiida-firecrest.git@8e99890",
   "aiida-workgraph==0.5.2",
   "termcolor",
   "pygraphviz",
