--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -92,11 +92,11 @@ tasks:
   - ROOT:
       # All tasks inherit the root task properties
       host: santis
-      computer: localhost # TODO root task does not pass specs currently, see C2SM/Sirocco/issues/7 
+      computer: remote # TODO root task does not pass specs currently, see C2SM/Sirocco/issues/7
       account: g110
   - extpar:
       plugin: shell  # no extpar plugin available yet
-      computer: localhost
+      computer: remote
       src: scripts/extpar
       command: "extpar --verbose --input {PORT::obs}"
       uenv:
@@ -106,7 +106,7 @@ tasks:
       walltime: 00:02:00
   - preproc:
       plugin: shell
-      computer: localhost
+      computer: remote
       src: scripts/cleanup.sh
       command: "bash cleanup.sh -p {PORT::extpar} -e {PORT::era} {PORT::grid}"
       env_source_files: data/dummy_source_file.sh
@@ -117,7 +117,7 @@ tasks:
         mount_point: runtime/mount/point
   - icon:
       plugin: icon
-      computer: localhost
+      computer: remote
       bin: /TESTS_ROOTDIR/tests/cases/large/config/ICON/bin/icon
       nodes: 40
       walltime: 23:59:59
@@ -135,7 +135,7 @@ tasks:
         mount_point: runtime/mount/point
   - postproc_1:
       plugin: shell
-      computer: localhost
+      computer: remote
       src: scripts/main_script_ocn.sh
       command: "bash main_script_ocn.sh {PORT::None}"
       nodes: 2
@@ -145,7 +145,7 @@ tasks:
         mount_point: runtime/mount/point
   - postproc_2:
       plugin: shell
-      computer: localhost
+      computer: remote
       command: "bash main_script_atm.sh --input {PORT::streams}"
       multi_arg_sep: ","
       nodes: 2
@@ -155,14 +155,14 @@ tasks:
         mount_point: runtime/mount/point
   - store_and_clean_1:
       plugin: shell
-      computer: localhost
+      computer: remote
       src: scripts/post_clean.sh
       command: "bash post_clean.sh {PORT::postout} {PORT::streams} {PORT::icon_input}"
       nodes: 1
       walltime: 00:01:00
   - store_and_clean_2:
       plugin: shell
-      computer: localhost
+      computer: remote
       src: scripts/post_clean.sh
       command: "bash post_clean.sh --archive {PORT::archive} --clean {PORT::clean}"
       nodes: 1
@@ -170,13 +170,13 @@ tasks:
 data:
   available:
     - grid_file:
-        computer: localhost
+        computer: remote
         src: /TESTS_ROOTDIR/tests/cases/large/config/data/grid
     - obs_data:
-        computer: localhost
+        computer: remote
         src: /TESTS_ROOTDIR/tests/cases/large/config/data/obs_data
     - ERA5:
-        computer: localhost
+        computer: remote
         src: /TESTS_ROOTDIR/tests/cases/large/config/data/era5
   generated:
     - extpar_file:
