Add option to pass the remote computer label to tests (#188)
This is to allow for different remote computers to be used depending on
the testing CI environment. The option can be set accordingly in the
corresponding CI YAML files.

Further notes:
- In the `config` YAML files, the remote computer always has the label
  `remote`, and, depending on the `--remote` pytest option, a different
  session scoped remote Computer is created
- Currently, only localhost with SSH is supported, but CSCS computer
  using FirecREST will be added
- Configuration of the `localhost-ssh` is done in the fixture, and the
  `safe_interval` set to 0.1s (with the 30s default cooldown time, this
  would significantly extend the testing time)
- To allow for localhost with SSH, the setup of SSH (starting
  the client, creating, and registering a key) is done in `ci.yaml`.
- In addition, the `aiida_computer` fixture has been copied over to our
  `conftest.py` and made a session-scoped fixture (using
  `tmp_path_factory` instead of `tmp_path`)

Co-authored-by: Julian Geiger <julian.geiger@psi.ch>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,20 @@ jobs:
         pip install hatch
     - name: Install Graphviz
       run: sudo apt-get install graphviz graphviz-dev
+    - name: Set up SSH on localhost
+      run: |
+        # Start SSH daemon
+        sudo systemctl start ssh
+
+        ssh-keygen -q -t rsa -b 4096 -N "" -f "${HOME}/.ssh/id_rsa"
+        ssh-keygen -y -f "${HOME}/.ssh/id_rsa" >> "${HOME}/.ssh/authorized_keys"
+        ssh-keyscan -H localhost >> "${HOME}/.ssh/known_hosts"
+
+        # The permissions on the GitHub runner are 777 which will cause SSH to refuse the keys and cause authentication to fail
+        chmod 755 "${HOME}"
+
+        # Test SSH connection
+        ssh -o StrictHostKeyChecking=no localhost 'echo "SSH connection successful"'
     - name: Install package
       run: |
         pip install .
@@ -38,7 +52,7 @@ jobs:
       env:
         PYTEST_ADDOPTS: "--durations=0"
       run: |
-        hatch test -m "not requires_icon" --parallel --cover
+        hatch test --cover --parallel -- -m "not requires_icon" --remote localhost-ssh
 
   docs:
     runs-on: ubuntu-latest
