--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -71,6 +71,9 @@ jobs:
         pip install hatch
         hatch run verdi presto
 
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
+
     - name: Run ICON tests
       shell: spack-bash {0}
       env:
