--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,10 @@ Changelog = "https://github.com/C2SM/Sirocco/blob/main/CHANGELOG.md"
 
 [tool.pytest.ini_options]
 # Configuration for [pytest](https://docs.pytest.org)
+log_level = "WARNING"
+log_cli = true
+log_cli_level = "WARNING"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
 addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
 norecursedirs = "tests/cases"
 markers = [
