add test-integration setup point

--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -71,13 +71,10 @@ jobs:
         pip install hatch
         hatch run verdi presto
 
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
-
     - name: Run ICON tests
       shell: spack-bash {0}
       env:
         PYTEST_ADDOPTS: "--durations=0"
       run: |
         spack env activate .
-        hatch test --cover --parallel -- -m "requires_icon" --remote localhost-ssh tests
+        hatch test --cover --parallel -- -m "requires_icon" --remote test-integration tests
