add ComputingResorce to define mpirun command

--- a/tests/cases/small-icon/config/config.yml
+++ b/tests/cases/small-icon/config/config.yml
@@ -46,21 +46,25 @@ tasks:
       namelists:
         - ./ICON/icon_master.namelist
         - ./ICON/model.namelist
-      walltime: 00:05:00
-      nodes: 1
-      ntasks_per_node: 1
-      mem: 1024
-      cpus_per_task: 1
+      mpi_cmd: "mpirun -np {MPI_TOTAL_PROCS}" 
+      resource:
+        walltime: 00:05:00
+        nodes: 1
+        ntasks_per_node: 1
+        mem: 1024
+        cpus_per_task: 1
   - cleanup:
       plugin: shell
       computer: remote
       src: scripts/cleanup.py
       command: "python cleanup.py"
-      walltime: 00:05:00
-      nodes: 1
-      ntasks_per_node: 1
-      mem: 1024
-      cpus_per_task: 1
+      mpi_cmd: "mpirun -np {MPI_TOTAL_PROCS}" 
+      resource:
+        walltime: 00:05:00
+        nodes: 1
+        ntasks_per_node: 1
+        mem: 1024
+        cpus_per_task: 1
 data:
   available:
      - icon_grid_simple:
