by default run with localhost

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ extra-dependencies = [
     "ipdb"
 ]
 default-args = []
-extra-args = ["--doctest-modules", "-m", "not slow and not requires_icon"]
+extra-args = ["--doctest-modules", "-m", "not slow and not requires_icon", "--remote", "localhost"]
 
 [[tool.hatch.envs.hatch-test.matrix]]
 python = ["3.12"]
