Add minimal CLI interface using `typer` and `rich` (#176)
Provided by command `sirocco`:
- `verify`: verify workflow spec in YAML file
- `represent`: pretty-printing text-based representation
- `visualize`: generating interactive SVG file
- `run`: run WG blockingly via AiiDA
- `submit`: submit to AiiDA daemon

Moves the fixture `minimal_config_path` to conftest to use it in the CLI tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dependencies = [
   "lxml",
   "f90nml",
   "aiida-shell>=0.8.1",
+  "rich~=14.0",
+  "typer~=0.16.0",
 ]
 license = {file = "LICENSE"}
 
@@ -48,6 +50,9 @@ license = {file = "LICENSE"}
 Repository = "https://github.com/C2SM/Sirocco.git"
 Documentation = "https://c2sm.github.io/Sirocco/"
 Changelog = "https://github.com/C2SM/Sirocco/blob/main/CHANGELOG.md"
+
+[project.scripts]
+sirocco = "sirocco.cli:app"
 
 [tool.pytest.ini_options]
 # Configuration for [pytest](https://docs.pytest.org)
