Add error logs on WorkGraph failures in tests (#192)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,10 @@ sirocco = "sirocco.cli:app"
 
 [tool.pytest.ini_options]
 # Configuration for [pytest](https://docs.pytest.org)
+log_level = "ERROR"
+log_cli = true
+log_cli_level = "ERROR"
+log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
 addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
 norecursedirs = "tests/cases"
 markers = [
