--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -15,9 +15,10 @@ job:
   stage: build
   extends: .f7t-controller
   script:
-    - FIRECREST_URL=https://api.cscs.ch/cw/firecrest/v1
+    - FIRECREST_URL=https://api.cscs.ch/cw/firecrest/v2
     - FIRECREST_SYSTEM=santis
-    - FIRECREST_API_VERSION=1.16.0
+    - FIRECREST_API_VERSION=2.2.0
+    - FIRECREST_TOKEN_URI=https://auth.cscs.ch/auth/realms/firecrest-clients/protocol/openid-connect/token
     #- firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --force --system $FIRECREST_SYSTEM || true
     #- firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tests --system $FIRECREST_SYSTEM
     #- firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml --system $FIRECREST_SYSTEM
@@ -44,8 +45,10 @@ job:
     #- firecrest ls --system $FIRECREST_SYSTEM /
     #- firecrest ls --system $FIRECREST_SYSTEM /capstor/scratch
     - verdi presto --profile-name "cscs-ci"
+    - verdi config set transport.task_maximum_attempts 1
+    - verdi config set transport.task_retry_initial_interval 1
     - verdi computer setup --label remote --hostname unused --transport firecrest --scheduler firecrest --work-dir /capstor/scratch/cscs/ricoh/sirocco-aiida -n
     - verdi devel launch-add # hacky way to define localhost TODO do properly
-    - verdi computer configure firecrest remote --url $FIRECREST_URL --token-uri https://auth.cscs.ch/auth/realms/firecrest-clients/protocol/openid-connect/token --client-id $FIRECREST_CLIENT_ID --client-secret $FIRECREST_CLIENT_SECRET --compute-resource $FIRECREST_SYSTEM --temp-directory /capstor/scratch/cscs/ricoh/sirocco-tmp --api-version 1.16.0 --small-file-size-mb 4096
+    - verdi computer configure firecrest remote --url $FIRECREST_URL --token-uri $FIRECREST_TOKEN_URI --client-id $FIRECREST_CLIENT_ID --client-secret $FIRECREST_CLIENT_SECRET --compute-resource $FIRECREST_SYSTEM --temp-directory /capstor/scratch/cscs/ricoh/sirocco-tmp --api-version $FIRECREST_API_VERSION --small-file-size-mb 4096 --billing-account cwd01
     - verdi computer test --print-traceback remote # TODO does not fail
     - python ci/preparerun.py
