Support for `IconTask` to produce `GeneratedData` to `ShellTask` (#175)
This allows to add output data to `IconTask` and to pass it to a `ShellTask`.

Note that the retrieval of generated files is not part of WorkGraph, but part of ShellJob. Thus, we use `metadata.options.additional_retrieve_list` to imitate this behavior in IconCalculation.

--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -62,7 +62,9 @@ cycles:
                   port: streams
               - icon_input:
                   port: icon_input
-            outputs: [stored_data_1]
+            outputs:
+              - stored_data_1
+              - atmo_log
   - yearly:
       cycling:
         start_date: *root_start_date
@@ -198,3 +200,5 @@ data:
         src: stored_data
     - stored_data_2:
         src: stored_data
+    - atmo_log:
+        src: nml.atmo.log
