--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -22,15 +22,15 @@ job:
     #- firecrest rm /capstor/scratch/cscs/ricoh/sirocco-tests --force --system $FIRECREST_SYSTEM || true
     #- firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tests --system $FIRECREST_SYSTEM
     #- firecrest upload tests/cases/small-icon/config/config.yml /capstor/scratch/cscs/ricoh/sirocco-tests config.yml --system $FIRECREST_SYSTEM
-    - firecrest ls --system $FIRECREST_SYSTEM /capstor/scratch/cscs/ricoh
-    - firecrest id --system $FIRECREST_SYSTEM
-    - firecrest filesystems --system $FIRECREST_SYSTEM
-    - firecrest get-partitions --system $FIRECREST_SYSTEM
-    - firecrest get-reservations --system $FIRECREST_SYSTEM
+    - #firecrest ls --system $FIRECREST_SYSTEM /capstor/scratch/cscs/ricoh
+    - #firecrest id --system $FIRECREST_SYSTEM
+    - #firecrest filesystems --system $FIRECREST_SYSTEM
+    - #firecrest get-partitions --system $FIRECREST_SYSTEM
+    - #firecrest get-reservations --system $FIRECREST_SYSTEM
     #- firecrest filesystems 
     #- firecrest filesystems -s santis
     #- firecrest filesystems --system $FIRECREST_SYSTEM
-    - firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tmp --system $FIRECREST_SYSTEM || true # ignore if exists TODO i think ifrecrest has an option
+    - #firecrest mkdir /capstor/scratch/cscs/ricoh/sirocco-tmp --system $FIRECREST_SYSTEM || true # ignore if exists TODO i think ifrecrest has an option
     - apt-get update -y && apt-get install -y --no-install-recommends graphviz graphviz-dev rabbitmq-server
     - pip install --upgrade pip
     - pip install . 
