--- a/tests/cases/large/config/config.yml
+++ b/tests/cases/large/config/config.yml
@@ -93,25 +93,29 @@ cycles:
 tasks:
   - ROOT:
       # All tasks inherit the root task properties
-      host: santis
       computer: remote # TODO root task does not pass specs currently, see C2SM/Sirocco/issues/7
-      account: g110
   - extpar:
       plugin: shell  # no extpar plugin available yet
       computer: remote
       src: scripts/extpar
       command: "extpar --verbose --input {PORT::obs}"
+      nodes: 1
+      ntasks_per_node: 1
+      cpus_per_task: 1
+      mem: 1024
+      walltime: 00:02:00
       uenv:
         squashfs: path/to/squashfs
         mount_point: runtime/mount/point
-      nodes: 1
-      walltime: 00:02:00
   - preproc:
       plugin: shell
       computer: remote
       src: scripts/cleanup.sh
       command: "bash cleanup.sh -p {PORT::extpar} -e {PORT::era} {PORT::grid}"
       nodes: 4
+      ntasks_per_node: 1
+      cpus_per_task: 1
+      mem: 1024
       walltime: 00:02:00
       uenv:
         squashfs: path/to/squashfs
@@ -120,8 +124,6 @@ tasks:
       plugin: icon
       computer: remote
       bin: /TESTS_ROOTDIR/tests/cases/large/config/ICON/bin/icon
-      nodes: 40
-      walltime: 23:59:59
       namelists:
         - ./ICON/icon_master.namelist:
             master_time_control_nml:
@@ -131,6 +133,10 @@ tasks:
               nproma: 96
             output_nml[1]:
               output_filename: atm_2d
+      nodes: 40
+      ntasks_per_node: 1
+      cpus_per_task: 1
+      walltime: 23:59:59
       uenv:
         squashfs: path/to/squashfs
         mount_point: runtime/mount/point
@@ -140,6 +146,8 @@ tasks:
       src: scripts/main_script_ocn.sh
       command: "bash main_script_ocn.sh {PORT::None}"
       nodes: 2
+      ntasks_per_node: 1
+      cpus_per_task: 1
       walltime: 00:05:00
       uenv:
         squashfs: path/to/squashfs
@@ -150,6 +158,8 @@ tasks:
       command: "bash main_script_atm.sh --input {PORT::streams}"
       multi_arg_sep: ","
       nodes: 2
+      ntasks_per_node: 1
+      cpus_per_task: 1
       walltime: 00:05:00
       uenv:
         squashfs: path/to/squashfs
@@ -160,6 +170,8 @@ tasks:
       src: scripts/post_clean.sh
       command: "bash post_clean.sh {PORT::postout} {PORT::streams} {PORT::icon_input}"
       nodes: 1
+      ntasks_per_node: 1
+      cpus_per_task: 1
       walltime: 00:01:00
   - store_and_clean_2:
       plugin: shell
@@ -167,6 +179,8 @@ tasks:
       src: scripts/post_clean.sh
       command: "bash post_clean.sh --archive {PORT::archive} --clean {PORT::clean}"
       nodes: 1
+      ntasks_per_node: 1
+      cpus_per_task: 1
       walltime: 00:01:00
 data:
   available:
