--- a/spack.yaml
+++ b/spack.yaml
@@ -1,7 +1,8 @@
 spack:
   view: /opt/view
   specs:
-  - icon ~aes ~jsbach ~ocean ~coupling ~rte-rrtmgp
+  - icon +mpi ~aes ~jsbach ~ocean ~coupling ~rte-rrtmgp
+  - openmpi
 
   compilers:
   - compiler:
