--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
   "isoduration",
   "pydantic",
   "ruamel.yaml",
-  "aiida-core>=2.5,<2.7.0",
+  "aiida-core==2.7.0",
   "aiida-icon>=0.4.0",
   "aiida-workgraph==0.5.2",
   "termcolor",
